@@ -1,3 +1,8 @@
+2011-08-19  Joseph Myers  <joseph@codesourcery.com>
+
+	* c-common.c (c_common_reswords): Add __builtin_complex.
+	* c-common.h (RID_BUILTIN_COMPLEX): New.
+
 2011-08-18  Joseph Myers  <joseph@codesourcery.com>
 
 	* c-common.c (c_common_reswords): Add _Noreturn.
